<resources>
    <string name="app_name">AppRickAndMorty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Thányla Sales</string>
    <string name="nav_header_subtitle">thanylas@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Perguntas</string>
    <string name="menu_slideshow">Resultados</string>
    <string name="menu_tools">WhatsApp</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_serie">Rick and Morty</string>
    <string name="menu_perguntas">Perguntas</string>
    <string name="menu_resultados">Resultados</string>
    <string name="action_curiosidade">Curiosidade</string>

    <string name="curiosidade1">
        1- Embora a produção seja essencialmente uma obra-prima, aparentemente,
        não demorou muito para que a visão da série realmente se concretizasse.
        Entretanto, na verdade, só levou cerca de seis horas para os escritores
        Dan Harmon e Justin Rolland bombear o primeiro episódio ‘Piloto’. Portanto,
        como diz a lenda, o episódio foi realmente escrito no mesmo dia.
    </string>
    <string name="curiosidade2">
        3- Em vários casos ao longo da série, o Rick observa que
        ele está completamente consciente de que ele está numa série de desenhos animados.
        Porque ele frequentemente fala com seu público à La Deadpool, e isso pode ser visto
        nos episódios ‘Total Rickall’ e ‘Raising Gazorpazorg’.
    </string>
    <string name="curiosidade3">
        2- Aparentemente, os dois personagens são baseados nas duas metades do co-criador
        Justin Roiland. Dan Harmon admitiu, dizendo que a série é “uma personificação precisa
        do transtorno bipolar”. Então faz sentido, considerando a forma como os dois
        personagens são diferentes, eles ainda conseguem manter uma relação muito sólida
        entre avô e neto.
    </string>

    <string name="introducao">
        Rick and Morty nasceu como uma sátira/homenagem ao icônico duo de protagonistas
        Doc Brown e Marty, dos filmes De Volta Para o Futuro, lançados na década de 1980.
    </string>
    <string name="pos_introducao">
        Rick and Morty, uma reedição existencialista, politicamente incorreta e
        brutalmente humana da clássica saga, superou a premissa “emprestada” e
        consagrou-se como um programa original por méritos próprios.
    </string>
    <string name="quiz">Quem é você no Rick and Morty</string>
    <string name="pergunta1">Ao ser teletransportado para um novo planeta você?</string>
    <string name="escravizar">Escravizar a população para seu divertimento.</string>
    <string name="amizade">Tentar fazer amizade com os habitantes.</string>
    <string name="selfie">Tiraria uma selfie para registrar que você é incrivel.</string>
    <string name="escondido">Ficaria escondido, afinal não sabe dos perigos que podem haver.</string>
    <string name="resultado">Ver resultado</string>
    <string name="pergunta2">Uma raça alienígena superior está comandando a Terra, e você?</string>
    <string name="q2resposta1">Pensa em um plano para dizima-los e expulsar cada verme do seu planeta.</string>
    <string name="q2resposta2">Eles não estão sendo malvados, então não vejo muito problema.</string>
    <string name="q2resposta3">Eles me amam, sou popular, que eles reinem sobre a Terra!</string>
    <string name="q2resposta4">Consegui um bom emprego, a vida é boa e segura, deixa como está.</string>
    <string name="q2resposta5">Já que todo mundo está feliz, eu estou feliz, vou beber.</string>
    <string name="pergunta3">Uma organização secreta está tentando roubar uma invenção sua muito valiosa para eles, colocando sua família em perigo, você?</string>
    <string name="q3resposta1">Invade a sede deles e manda tudo para o espaço!</string>
    <string name="q3resposta2">Pensa em como pode fazer para eles entregarem o objeto.</string>
    <string name="q3resposta3">Entrega, mas exige os créditos pela invenção.</string>
    <string name="q3resposta4">Com tanto medo, não só entrega a invenção, mas todos os seus projetos.</string>
    <string name="q3resposta5">Destrói a inveção, pois sabe que não deve cair em mão erradas.</string>
    <string name="textResultado">Você é ...</string>
</resources>
