<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_serie"
            android:icon="@drawable/haha"
            android:title="@string/menu_serie" />
        <item
            android:id="@+id/nav_perguntas"
            android:icon="@drawable/curiosidade"
            android:title="@string/menu_perguntas" />
        <item
            android:id="@+id/nav_resultados"
            android:icon="@drawable/inicio"
            android:title="@string/menu_resultados" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/whatsapp"
            android:title="@string/menu_tools" />
    </group>

</menu>
