<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_serie">

    <fragment
        android:id="@+id/nav_serie"
        android:name="com.example.apprickandmorty.ui.serie.SerieFragment"
        android:label="@string/menu_serie"
        tools:layout="@layout/fragment_serie" />

    <fragment
        android:id="@+id/nav_perguntas"
        android:name="com.example.apprickandmorty.ui.perguntas.PerguntasFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_perguntas" />

    <fragment
        android:id="@+id/nav_resultados"
        android:name="com.example.apprickandmorty.ui.resultados.ResultadosFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_resultados" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.apprickandmorty.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />
</navigation>