<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        tools:context=".curiosidade.CuriosidadeActivity">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/action_curiosidade"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewCuriosidade"
            android:layout_width="wrap_content"
            android:layout_height="333dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/curiosidade" />

        <TextView
            android:id="@+id/text_curiosidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/curiosidade1"
            android:textAlignment="inherit"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewCuriosidade" />

        <TextView
            android:id="@+id/text_curiosidade2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/curiosidade2"
            android:textAlignment="inherit"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_curiosidade3" />

        <TextView
            android:id="@+id/text_curiosidade3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/curiosidade3"
            android:textAlignment="inherit"
            android:textSize="15sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_curiosidade" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>